6-istio-基础演示/4-网格外部通信/3-nginx-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: istio-test
spec:
  hosts:
  - "nginx.hihihiai.com"
  gateways:
  - bookinfo-gateway
  http:
  - route:
    - destination:
        host: nginx
        subset: appv1
      weight: 30
    - destination:
        host: nginx
        subset: appv2
      weight: 70
